[package]
name = "indexer_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite = "0.16.0"
serde_json = "1.0.78"
serde = { version = "1.0.78", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["tls"] }
futures-util = "0.3"
tokio-native-tls = "0.3"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15.0"
clap = { version = "4.2.5", features = ["derive"] }